[project]
name = "cunite"
version = "0.1.0"
description = "Select a random video from a random Pornhub subscription."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "nicegui>=2.3.0",
    "phub>=4.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cunite"]
